objects/Apttus__Agreement_Rule__c.object
<CustomObject>
    <description>Specifies a rule used to evaluate various agreement actions such as submit request</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Rule active indicator. Inactive rules are ignored by the rule selection process</description>
        <inlineHelpText>Indicates whether the rule is active. Inactive rules are ignored.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__ConditionFilterLogic__c</fullName>
        <description>The condition filter logic expression</description>
        <inlineHelpText>Enter any combination of AND, OR, parenthesis, and numbers representing the expressions. These are the only values that can be used. Using other values may cause unexpected behavior.</inlineHelpText>
        <label>Condition Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__EditInclusionCriteria__c</fullName>
        <description>&quot;Edit Inclusion Criteria&quot; custom button</description>
        <formula>IF (True, HYPERLINK(&quot;/apex/Apttus__RuleInclusionCriteriaEdit?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_EditCriteria&quot;, &quot;Edit Inclusion Criteria&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Inclusion Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__InclusionCriteriaCompOper__c</fullName>
        <description>The rule inclusion criteria comparison operator</description>
        <label>Inclusion Criteria Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__InclusionCriteriaFieldName__c</fullName>
        <description>he rule inclusion criteria field</description>
        <label>Inclusion Criteria Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__InclusionCriteriaFieldValue__c</fullName>
        <description>The rule inclusion criteria value</description>
        <label>Inclusion Criteria Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Order__c</fullName>
        <description>Rule sequence</description>
        <inlineHelpText>Rule sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Rule_Description__c</fullName>
        <label>Rule Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Rule_Field__c</fullName>
        <label>Rule Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Rule_Object__c</fullName>
        <label>Rule Object</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Rule_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>APTS_Template__c</fullName>
                </value>
                <value>
                    <fullName>EmailTemplate</fullName>
                </value>
                <value>
                    <fullName>QueueSObject</fullName>
                </value>
                <value>
                    <fullName>Folder</fullName>
                </value>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__APTS_Template__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement Template</fullName>
                </value>
                <value>
                    <fullName>Agreement Type</fullName>
                </value>
                <value>
                    <fullName>Email Template</fullName>
                </value>
                <value>
                    <fullName>Queue Assignment</fullName>
                </value>
                <value>
                    <fullName>Submit Request Mode</fullName>
                </value>
                <value>
                    <fullName>Document Folder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Rule_Value__c</fullName>
        <label>Rule Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Agreement Rule</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Active__c</columns>
        <columns>Apttus__Order__c</columns>
        <columns>Apttus__Rule_Type__c</columns>
        <columns>Apttus__Rule_Object__c</columns>
        <columns>Apttus__Rule_Field__c</columns>
        <columns>Apttus__Rule_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contract_Ops_Agreement_Rule</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>